<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="#fff"
        tools:context="com.example.ariad.rainesair.ChangePasswordActivity">


        <EditText
            android:id="@+id/changepassword_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/changepassword_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="#000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/changepassword_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:text="@string/change"

            />


    </LinearLayout>

</ScrollView>